Use same relative url logic when writing XML output

BUG: 472778
FIXED-IN: 3.5.2